--- a/R/mice.reuse/mice.reuse_example.Rmd
+++ b/R/mice.reuse/mice.reuse_example.Rmd
@@ -5,7 +5,7 @@ author: "Patrick Rockenschaub"
 date: "20/03/2020"
 output: 
   rmarkdown::github_document:
-    pandoc_args: --webtex
+    pandoc_args: --webtex=http://chart.apis.google.com/chart?cht=tx&chl=
 ---
 
 ```{r setup, include=FALSE}
